samples/_failures_safe/1761273029_eb277d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6db7973b.c: In function ‘main’:
./samples/SAFE/__tmp_6db7973b.c:159:13: error: expected expression at end of input
  159 |             if (multiply_matrices(&mat1,
      |             ^~
./samples/SAFE/__tmp_6db7973b.c:159:17: error: too few arguments to function ‘multiply_matrices’
  159 |             if (multiply_matrices(&mat1,
      |                 ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6db7973b.c:66:5: note: declared here
   66 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6db7973b.c:159:13: error: expected declaration or statement at end of input
  159 |             if (multiply_matrices(&mat1,
      |             ^~
./samples/SAFE/__tmp_6db7973b.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6db7973b.c:159:13: error: expected declaration or statement at end of input
